bullet_ws/log/build_2025-10-09_14-25-12/sim/stderr.log
  File "/home/arepo/vsss_sim/bullet_ws/install/sim/lib/python3.10/site-packages/sim/vision.py", line 160
    best = ([center[0] + offset[0], center[1] + offset[1], angle], f"Robot{self.getID([sq_1[0]["color"], sq_2[0]["color"], rect["color"]])}", avg_distance)
                                                                                                ^^^^^
SyntaxError: f-string: unmatched '['

